add stormpath app and stormpath.json file

--- a/view/index.html
+++ b/view/index.html
@@ -20,7 +20,7 @@
   <script src="/js/controllers.js"></script>
   <script src="/js/services.js"></script>
 </head>
-    <body ng-app='mean-stormpath'>
+    <body ng-app='meanStormpath'>
         <div class="container">
 
 
